[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
authors = ["Charley DAVID <hello@calyh.re>"]
edition = "2018"

[build-dependencies] # <-- We added this and everything after!
lalrpop = { version = "0.19.0", features = ["lexer"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.0"
petgraph = "0.5.1"
regex = "1"
